# pa013-rover-cpp

./: CMakeLists.txt  README.md  build.sh
Google_tests/: CMakeLists.txt  resource_test.cpp  resource_test_mock.cpp  resource_test_parameterized.cpp
src/: main.cpp  resource.cpp  resource.hpp  rover.cpp  rover.hpp  task.cpp  task.hpp
tests/: resource_test_mock.cpp  resource_test_parameterized.cpp
